# qa-automation-harness

./: .gitignore  README.md  pyproject.toml  testid-rn.json  testid-web.json
.claude-plugin/: marketplace.json  plugin.json
fixtures/: sample-tc.json  selector-manifest-poc.json  selector-manifest.json  testid-rules.yaml
hooks/: hooks.json
plugins/qa-harness/: pyproject.toml
plugins/qa-harness/.claude-plugin/: plugin.json
plugins/qa-harness/fixtures/: test-accounts.json
plugins/qa-harness/qa_harness/: __init__.py  cli.py  config.py  types.py
plugins/qa-harness/qa_harness/knowledge/: catalog.py
plugins/qa-harness/qa_harness/tools/: cdp_bridge.py  manifest_generator.py  renderer_dispatch.py  testid_injector.py  yaml_generator.py  yaml_validator.py
plugins/qa-harness/scripts/: cdp_input.js  check_renderer.js  input_server.py  input_text_remote.js  install-qa-harness.sh
plugins/qa-harness/skills/: README.md
plugins/qa-harness/skills/qa-orchestrate/: SKILL.md
plugins/qa-harness/skills/qa-run/: SKILL.md
plugins/qa-harness/skills/qa-testid/: SKILL.md
plugins/qa-harness/skills/qa-triage/: SKILL.md
plugins/qa-harness/src/knowledge/screens/: already-registered.json  intro.json  permission-dialog.json  phone-input.json
plugins/qa-harness/src/templates/: korean-input-native.template.yaml  korean-input-webview.template.yaml  login-flow.template.yaml  permission-dialog.template.yaml  profile-input.template.yaml  signup-phone.template.yaml
qa_harness/: cli.py  types.py
scripts/: adb_clipboard_input.sh  install-qa-harness.sh  qa-harness.sh  tap_remote.js
(+43 files in other folders)
